crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__uncond-overlap-direct.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/uncond-overlap-direct.js
---
import { c as _c } from "react/compiler-runtime";
// Test that we correctly track a subpath if the subpath itself is accessed as
// a dependency
function TestOverlappingTracked(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.a) {
		x = {};
		x.b = props.a.b;
		x.c = props.a.c;
		x.a = props.a;
		$[0] = props.a;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: TestOverlappingTracked,
	params: [{ a: { c: 2 } }]
};
