crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__uncond-subpath-order1.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/uncond-subpath-order1.js
---
import { c as _c } from "react/compiler-runtime";
// Determine that we only need to track p.a here
// Ordering of access should not matter
function TestDepsSubpathOrder1(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.a) {
		x = {};
		x.b = props.a.b;
		x.a = props.a;
		x.c = props.a.b.c;
		$[0] = props.a;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: TestDepsSubpathOrder1,
	params: [{ a: { b: { c: 2 } } }]
};
