crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__uncond-subpath-order2.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/uncond-subpath-order2.js
---
import { c as _c } from "react/compiler-runtime";
// Determine that we only need to track p.a here
// Ordering of access should not matter
function TestDepsSubpathOrder2(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.a) {
		x = {};
		x.a = props.a;
		x.b = props.a.b;
		x.c = props.a.b.c;
		$[0] = props.a;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: TestDepsSubpathOrder2,
	params: [{ a: { b: { c: 2 } } }]
};
